# rust-alpha-api

./: package.json
model/: Cargo.toml
model/src/: lib.rs  models.rs  show_users.rs  write_users.rs
rust_alpha_api/: .env  Cargo.toml
rust_alpha_api/migrations/2022-03-16-133431_users/: up.sql
rust_alpha_api/src/: lib.rs  main.rs  models.rs  response.rs  schema.rs
