[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpq = "3.0"
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
